--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--=============== FAVICON ===============-->
     <link rel="icon" href="./images/shapes/Frame 59.jpg" type="image" sizes="16x16">
-    <title>Document</title>
+    <title>Food Network</title>
 
     <!--=============== CSS ===============-->
 
