--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <footer id="footer">
         <div class="footer__contact">
-            <h2> <span>FOOD</span> NETWORK</h2>
+            <h2> <span>ALLRECIPS</span> COM</h2>
             <P>Eat healthy to healthy.Live Healthy to live happy</P>
         </div>
     </footer>
